Fix wrapping for pre tag
It was not speicific to the pre tag

--- a/src/styles/_academy.scss
+++ b/src/styles/_academy.scss
@@ -153,9 +153,11 @@
 
 .GradingEditor {
   .grading-editor-solution {
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    word-break: break-word;
+    pre {
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      word-break: break-word;
+    }
   }
   .grading-editor-input-parent {
     /** Center the text for numeric input and showing grades. */
